@@ -4,6 +4,7 @@ Release 0.91_01
     added META_MERGE bugtracker, repository to Makefile.PL
     cleanup Makefile.PL a bit
     fixed uninitialized warning in _unpack_ticket() [51138]
+    fixed Odd number of elements warning in _unpack_ticket() [51136]
 
 Release 0.90
     changed LICENSE information in README removed "same terms as perl" and be
